Resolved wrong syntax for routing & thus component not showing up. Moved additional info to its own component.

--- a/src/components/AttributeBar/AttributeBar.css
+++ b/src/components/AttributeBar/AttributeBar.css
@@ -1,8 +1,3 @@
-.additional-info {
-  text-align: left;
-  margin-left: 1rem;
-}
-
 .attribute-icon {
   height: 0.75rem;
   width: 0.75rem;
